# RACI-Project-Management-System

./: .gitignore  CHANGELOG.md  Makefile  db.sqlite3  journal.py  manage.py  pyproject.toml  raci.sqlite3  raci_db.sqlite3  setup.sh
.github/workflows/: release.yml
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_id.py  0002_customuser_gender.py  0002_emaillog.py  0003_customuser_role_alter_customuser_groups_and_more.py  0003_trusteddevice.py  0004_alter_trusteddevice_options_and_more.py  0004_customuser_is_external_member.py  0005_alter_trusteddevice_options_trusteddevice_browser_and_more.py  0005_customuser_department.py  0006_customuser_position.py  0006_loginattempt.py  0007_customuser_invite_expires_at_customuser_invite_token_and_more.py  0007_loginattempt_payload.py  0008_customuser_description.py  0008_notificationpreference.py  0009_alter_emaillog_sender.py  0010_alter_emaillog_sender.py  0011_alter_emaillog_sender.py  0012_alter_customuser_profile_image.py
accounts/service/: stats.py  team.py
accounts/utils/: client.py
chat/: models.py  serializers.py  urls.py  views.py
core/: middleware.py
core/services/: emails_auth.py  invited.py  leave_emails.py  storage_backend.py
core/utils/: weekdays.py  year.py
employee/: admin.py  models.py  serializers.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_alter_leaveallocation_options_and_more.py  0002_leaverequest_supervisors_and_more.py  0003_copy_supervisor_to_supervisors.py  0003_employeecontract_default_week_days_and_more.py  0004_employeecontract_contract_months.py  0005_remove_employeecontract_fte_ratio_and_more.py  0006_leavegroup_alter_leaverequest_options_and_more.py  0007_alter_leaverequest_end_date_and_more.py  0008_employeecontract_is_expired.py  0009_alter_employeecontract_is_expired.py  0010_leaverequest_contract_delete_leaveallocation.py  0011_remove_employeecontract_position_and_more.py  0012_remove_employeecontract_entitled_leave_override_and_more.py  0013_employeecontract_fte_percentage.py  0014_remove_employeecontract_days_per_week_and_more.py  0015_employeecontract_default_week_days.py  0016_alter_employeecontract_fte_percentage.py  0017_employeecontract_is_forfeited.py
employee/utils/: __init__.py  leave_logic.py  timesheet.py
mint/: admin.py  calender.py  models.py  serializers.py  urls.py  views.py
mint/cron/: for_review.py
mint/migrations/: 0001_initial.py  0002_alter_leaveallocation_options_and_more.py  0002_milestonecomment_projectcomment_projectnote.py  0002_project_priority.py  0003_alter_project_priority_alter_task_priority.py  0003_publicholiday_calendarevent.py  0003_remove_leaveallocation_mint_leave__user_id_8e5a3b_idx_and_more.py  0004_alter_project_priority.py  0004_project_comment_notify_project_notify_supervisor_and_more.py  0004_rename_annual_carryover_leaveallocation_annual_left_and_more.py  0005_leaveallocation_compassionate_leave_days_and_more.py  0005_project_supervisor.py  (+1 more)
notifications/: jobs.py  service.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
raci/: asgi.py  settings.py  urls.py  views.py  wsgi.py
(+43 files in other folders)
